[package]
edition = "2021"
name = "frc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = {version = "0.59", default-features = false, features = ["runtime"]}
cc = {version = "1.0", features = ["parallel"]}
glob = "0.3"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
